Update descriptions for write API and deleteIntegration endpoint

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -704,6 +704,7 @@ paths:
     delete:
       summary: Delete an integration
       operationId: deleteIntegration
+      description: Delete an integration and all its installations.
       tags: ["Integration"]
       parameters:
         - name: projectIdOrName
@@ -1200,8 +1201,8 @@ paths:
                           description: The content of the config.
                       description: The config of the installation.
                   description:
-                    The installation fields to update. (Only include the
-                    fields you'd like to update.)
+                    The installation fields to update. (You only need to include the
+                    fields you'd like to update, which are specified in the update masks. The rest will be ignored.)
         required: true
       responses:
         200:
