--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -443,7 +443,6 @@ components:
       description: The registry of provider modules.
       additionalProperties:
         $ref: "#/components/schemas/ModuleInfo"
-      x-go-type: map[string]ModuleInfo
 
     ModuleInfo:
       title: Module Info
@@ -495,7 +494,7 @@ components:
           x-oapi-codegen-extra-tags:
             validate: required
         defaultModule:
-          x-go-type: string
+          type: string
         oauth2Opts:
           $ref: '#/components/schemas/Oauth2Opts'
         apiKeyOpts:
@@ -687,7 +686,6 @@ components:
       description: Does this metadata item only apply to a specific module?
       additionalProperties:
         $ref: '#/components/schemas/ModuleDependency'
-      x-go-type: map[string]ModuleDependency
 
     ModuleDependency:
       title: Module Dependency
