--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -595,8 +595,8 @@ components:
           $ref: '#/components/schemas/FieldCreatedEvent'
         fieldDeleted:
           $ref: '#/components/schemas/FieldDeletedEvent'
-        fieldTypeChanged:
-          $ref: '#/components/schemas/FieldTypeChangedEvent'
+        fieldChanged:
+          $ref: '#/components/schemas/FieldChangedEvent'
 
     FieldCreatedEvent:
       title: Field Created Event
@@ -622,14 +622,14 @@ components:
           description: If always, the integration will monitor for deleted fields by default.
           enum: [always]
 
-    FieldTypeChangedEvent:
-      title: Field Type Changed Event
+    FieldChangedEvent:
+      title: Field Changed Event
       type: object
-      description: Configuration for detecting when field types change.
+      description: Configuration for detecting when fields are changed.
       required:
         - enabled
       properties:
         enabled:
           type: string
-          description: If always, the integration will monitor for field type changes by default.
+          description: If always, the integration will monitor for field changes by default.
           enum: [always]
