--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -85,8 +85,8 @@ components:
         readType:
           description: >-
             The type of read operation. This is only populated for Read Actions, not Subscribe Actions.
-            Possible values are 'backfill' (full historic read), 'triggered' (on-demand read via API),
-            or 'scheduled' (regular scheduled incremental read).
+            Possible values are 'backfill' (initial backfill), 'triggered' (on-demand read via API),
+            or 'scheduled' (regular scheduled read).
           type: string
           enum:
             - backfill
