--- a/api/api.yaml
+++ b/api/api.yaml
@@ -746,6 +746,7 @@ paths:
     put:
       summary: Batch upsert a group of integrations
       operationId: batchUpsertIntegrations
+      description: This endpoint is used by the Ampersand CLI to batch upsert integrations. We recommend using the [CLI's deploy command](https://docs.withampersand.com/cli/overview#deploy-integrations) rather than this API endpoint directly.
       tags: ["Integration"]
       parameters:
         - name: projectIdOrName
@@ -803,6 +804,7 @@ paths:
     post:
       summary: Create a new revision.
       operationId: createRevision
+      description: We recommend using the [CLI's deploy command](https://docs.withampersand.com/cli/overview#deploy-integrations) rather than this API endpoint directly, unless you have an advanced use case.
       tags: ["Revision"]
       parameters:
         - name: projectIdOrName
